WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
298548
[cleanup] SVG line layout does not need emphasisMarkExistsAndIsAbove
https://bugs.webkit.org/show_bug.cgi?id=298548
Summary
[cleanup] SVG line layout does not need emphasisMarkExistsAndIsAbove
alan
Reported
2025-09-08 12:26:28 PDT
ssia
Attachments
[fast-cq]Patch
(9.57 KB, patch)
2025-09-08 12:28 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2025-09-08 12:28:23 PDT
Created
attachment 476675
[details]
[fast-cq]Patch
EWS
Comment 2
2025-09-09 10:01:21 PDT
Committed
299757@main
(579393c39cb0): <
https://commits.webkit.org/299757@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 476675
[details]
.
Radar WebKit Bug Importer
Comment 3
2025-09-09 10:02:16 PDT
<
rdar://problem/160210259
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug