[cleanup] SVG line layout does not need emphasisMarkExistsAndIsAbove https://bugs.webkit.org/show_bug.cgi?id=298548

Reviewed by Antti Koivisto.

Move RenderText::emphasisMarkExistsAndIsAbove to TextBoxPainter.

* Source/WebCore/rendering/LegacyInlineFlowBox.cpp:
(WebCore::LegacyInlineFlowBox::addTextBoxVisualOverflow):
* Source/WebCore/rendering/RenderText.cpp:
(WebCore::RenderText::emphasisMarkExistsAndIsAbove): Deleted.
* Source/WebCore/rendering/RenderText.h:
* Source/WebCore/rendering/TextBoxPainter.cpp:
(WebCore::emphasisMarkExistsAndIsAbove):
(WebCore::m_haveSelection):
(WebCore::TextBoxPainter::paintForeground):
(WebCore::m_emphasisMarkExistsAndIsAbove): Deleted.
* Source/WebCore/rendering/TextBoxPainter.h:

Canonical link: https://commits.webkit.org/299757@main