Source/WebCore/rendering/LegacyInlineFlowBox.cpp
@@ -216,14 +216,6 @@ inline void LegacyInlineFlowBox::addTextBoxVisualOverflow(LegacyInlineTextBox& t
     auto leftGlyphOverflow = -strokeOverflow - leftGlyphEdge;
     auto rightGlyphOverflow = strokeOverflow + rightGlyphEdge;
 
-    if (auto markExistsAndIsAbove = RenderText::emphasisMarkExistsAndIsAbove(textBox.renderer(), lineStyle)) {
-        LayoutUnit emphasisMarkHeight = lineStyle.fontCascade().emphasisMarkHeight(lineStyle.textEmphasisStyle().markString());
-        if (*markExistsAndIsAbove == !writingMode.isBlockFlipped())
-            topGlyphOverflow = std::min(topGlyphOverflow, -emphasisMarkHeight);
-        else
-            bottomGlyphOverflow = std::max(bottomGlyphOverflow, emphasisMarkHeight);
-    }
-
     // If letter-spacing is negative, we should factor that into right layout overflow. (Even in RTL, letter-spacing is
     // applied to the right, so this is not an issue with left overflow.
     rightGlyphOverflow -= std::min(0, (int)lineStyle.fontCascade().letterSpacing());
